--- a/examples/nav.html
+++ b/examples/nav.html
@@ -5,7 +5,7 @@
     <title>组件平台显示内容</title>
     <script type="text/javascript" src="//cdn.bootcss.com/jquery/1.10.1/jquery.min.js"></script>
     <link type="text/css" rel="stylesheet" href="//storage.jd.com/v2.0.0/content.min.css" />
-    <link type="text/css" rel="stylesheet" href="//storage.360buyimg.com/v2.0.0/nv.min.css" />
+    <link type="text/css" rel="stylesheet" href="/dist/cdn/nv.min.css" />
     <script type="text/javascript" src="//storage.360buyimg.com/v2.0.0/nv.js"></script>
     <!--<link rel="stylesheet" href="//storage.jd.com/0.0.1/nv/css/cdn_nv.min.css">-->
 </head>
