--- a/examples/progress.html
+++ b/examples/progress.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Progress</title>
     <link type="text/css" rel="stylesheet" href="//storage.jd.com/v2.0.0/content.min.css" />
-    <link type="text/css" rel="stylesheet" href="//storage.360buyimg.com/v2.0.0/nv.min.css" />
+    <link type="text/css" rel="stylesheet" href="/dist/cdn/nv.min.css" />
     <script type="text/javascript" src="//storage.360buyimg.com/v2.0.0/nv.js"></script>
     <style>
          /* .nv-progress-current{
