--- a/examples/upload.html
+++ b/examples/upload.html
@@ -5,7 +5,7 @@
     <title>Upload</title>
     <!--开发阶段引用jq-->
     <link type="text/css" rel="stylesheet" href="//storage.jd.com/v2.0.0/content.min.css" />
-    <link type="text/css" rel="stylesheet" href="//storage.360buyimg.com/v2.0.0/nv.min.css" />
+    <link type="text/css" rel="stylesheet" href="/dist/cdn/nv.min.css" />
     <script type="text/javascript" src="//storage.360buyimg.com/v2.0.0/nv.js"></script>
     <style type="text/css">
         .c-demo-w400{
