--- a/examples/第三方组件/常见组件列表.html
+++ b/examples/第三方组件/常见组件列表.html
@@ -296,7 +296,7 @@
                         <div class="c-cell c-table-w-500">图片压缩</div>
                     </td>
                     <td>
-                        <div class="c-cell c-table-w-125"><a target="_blank" href="https://github.com/guguaihaha/compress">API</a></div>
+                        <div class="c-cell c-table-w-125"><a target="_blank" href="https://github.com/Nv-js/compress">API</a></div>
                     </td>
                 </tr>
                 <tr>
