--- a/examples/datePicker.html
+++ b/examples/datePicker.html
@@ -164,7 +164,7 @@
             </div>
     <script type="text/javascript">
         /*
-        Nv.use("dataPicker",function(nv,picker){
+        Nv.use("datePicker",function(nv,picker){
                 picker.init({
                     target:"#date-1",
                     type:"normal"
